# Epen-Test-Task

./: CMakeLists.txt  README.md
factory_module/: CMakeLists.txt
factory_module/src/: factoryLib.cpp  factoryLib.h  getType.h
sampleApp/: CMakeLists.txt  main.cpp
sampleApp/src/: Fruits.h  Shape.h
